# exql

./: .gitignore  README.md  config.properties  requirements.txt  setup.cfg  setup.py
exql/: dao.py  exql.py  logger.py  sql.py  sqlModel.py
exql/test_dir/: file1.csv  file2.csv  file3.csv  result.csv  t.xlsx
src/exql/: dao.py  exql.py  logger.py  sql.py
src/resources/: deletion_template.csv  insertion_template.csv  table_creation_template.csv
src/resources/demo_university_db/: department.csv  student.csv
src/resources/demo_university_db/other/: courses.csv  delete_student.csv  insert_student.csv
src/resources/demo_university_db/output/: student_result.csv
src/resources/demo_university_db/output/demo_university_db/: courses.csv  department.csv  student.csv
