[metadata]
name = exql
version = 1.4
author = Tabish
author_email = taabishm2@gmail.com
description = Persist Excel/CSV sheets to MySQL (and vice versa)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/taabishm2/exql
project_urls =
    Bug Tracker = https://github.com/taabishm2/exql/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src